# fedem-mdb

./: .gitmodules  CMakeLists.txt  FedemDB.C  README.md
.github/workflows/: run-test.yml  versioning.yml
.reuse/: dep5
LICENSES/: BSD-4-Clause.txt
assemblyCreators/: CMakeLists.txt  assemblyCreators.H  bladeCreator.C  eventCreator.C  eventCreator.H  graphCreator.C  jacketCreator.C  regsysCreator.C  turbineConverter.C  turbineConverter.H
chainShape/: CMakeLists.txt  ChainShape.H  chainModel.f90  chainShape.f90  fcn.f90
chainShape/Minpack/: CMakeLists.txt  README.md
chainShape/Minpack/src/: README.md  enorm.f  lmder.f  r1mpyq.f
cmake/Modules/: FindQt4.cmake
test/: CMakeLists.txt  test_FedemDB.C  test_FmFileSys.C  test_FmPart.C  test_creators.C
test/LinkDB/: jalla.ftl  jalla_ftl1-1.ftl  jalla_ftl1-2.ftl
test/chainShape/: CMakeLists.txt  test.f90  testCS.pf
test/fedempy/: CMakeLists.txt  README.md  test_Loader.py  test_Microbatch.py  test_SLA.py  test_StressExport.py  test_extfunc.py  test_fepart.py  test_functions.py  test_inverse.py  test_joint.py  test_modeler.py  test_reducer.py  test_revjoint.py  test_solveSLA.py  test_solver.py  test_springdamper.py  test_userdefelm.py  test_utils.py
test/fedempy/divergence/: README.md  loader_01.fmm  loader_01_input.csv  test_Divergence.py
test/fedempy/models/: 01-loader.yaml  02-loader.yaml  BellCrank.flm  Boom.flm  Bucket.flm  BucketLink.flm  CQUAD04_.nas  Front.flm  cylinders.yaml  exported_curves.asc  fe_parts.yaml  joints.yaml  parts.yaml  triads.yaml
test/models/: Gravemaskin.fmm
vpmDB/: CMakeLists.txt  Fm1DMaster.C  Fm1DMaster.H  FmAirState.C  FmAirState.H  FmAllControlHeaders.H  FmAllFunctionHeaders.H  FmAnalysis.C  FmAnalysis.H  FmAnimation.C  FmAnimation.H  FmArcSegmentMaster.C  FmArcSegmentMaster.H  FmArray.H  FmAssemblyBase.C  FmAssemblyBase.H  FmAxialDamper.C  FmAxialDamper.H  FmAxialSpring.C  FmAxialSpring.H  FmBallJoint.C  FmBallJoint.H  FmBase.C  FmBase.H  FmBeam.C  FmBeam.H  FmBeamProperty.C  FmBeamProperty.H  FmBearingFriction.C  FmBearingFriction.H  FmBladeProperty.C  FmBladeProperty.H  FmCamFriction.C  FmCamFriction.H  FmCamJoint.C  FmCamJoint.H  FmColor.H  FmControlAdmin.C  FmControlAdmin.H  FmCreate.C  (+235 more)
vpmDB/FuncPixmaps/: blank.xpm  complsinus.xpm  constant.xpm  delayedcomplsinus.xpm  diracpuls.xpm  jonswap.xpm  limitedramp.xpm  linderivvar.xpm  linearvar.xpm  prismJntFric.xpm  ramp.xpm  revJntFric.xpm  scale.xpm  sinus.xpm  smooth.xpm  spline.xpm  squarepuls.xpm  step.xpm  userDefinedWaveSpectrum.xpm
vpmDB/Icons/: C_Rdamper.xpm  C_Tdamper.xpm  FELink.xpm  F_Tdamper.xpm  F_Tspring.xpm  FmIconPixmaps.H  FmIconPixmapsMain.H  K_Rspring.xpm  K_Tspring.xpm  T_Rdamper.xpm  T_Rspring.xpm  allElemsVisible.xpm  ballJoint.xpm  beam.xpm  beamProp.xpm  beamstring.xpm  camJoint.xpm  camJointFriction.xpm  control.xpm  createRoad.xpm  createTire.xpm  ctrl1ordTF.xpm  ctrl1ordTFSymbol.xpm  ctrl2ordTF.xpm  ctrl2ordTFSymbol.xpm  ctrlAdder.xpm  ctrlAdderSymbol.xpm  ctrlAmplifier.xpm  ctrlAmplifierSymbol.xpm  ctrlCompConjPole.xpm  ctrlCompConjPoleSymbol.xpm  ctrlComparator.xpm  ctrlComparatorSymbol.xpm  ctrlDeadZone.xpm  ctrlDeadZoneSymbol.xpm  ctrlElemIn.xpm  ctrlElemOut.xpm  ctrlHysteresis.xpm  ctrlHysteresisSymbol.xpm  ctrlIntegrator.xpm  (+79 more)
